--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "This is full Functional E-commerce App",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js",
+    "start": "index.js",
     "npm": "index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
